<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9">

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/display_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageAndTitle"
        android:background="#f8f8f8"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/imageContactDescription"/>

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/itemImage"
            android:layout_toEndOf="@+id/itemPrice" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/itemTitle" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/imageAndTitle"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descAndButton"
        android:layout_below="@+id/imageAndTitle"
        android:background="#f8f8f8"
        android:padding="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/description"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text=""
            android:layout_below="@+id/itemDescription"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/buyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyButton"
            android:background="@drawable/rounded_button"
            android:textStyle="bold"
            android:textColor="#F8F8F8"
            android:layout_margin="20dp"
            android:layout_below="@+id/description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/descAndButton"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aboutSection"
        android:layout_below="@+id/descAndButton"
        android:layout_marginTop="10dp"
        android:background="#f8f8f8"
        android:padding="10dp">

        <TextView
            android:id="@+id/aboutItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/aboutItem"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/condition"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/aboutItem" />


        <TextView
            android:id="@+id/conditionGiven"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/aboutItem"
            android:layout_toEndOf="@+id/quantity" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/quantity"
            android:layout_below="@+id/condition"
            android:layout_alignParentStart="true" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/condition"
            android:layout_toEndOf="@+id/quantity"
            android:id="@+id/quantityGiven"
            android:textSize="15sp"/>

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityGiven"
            android:layout_toEndOf="@+id/quantity"
            android:id="@+id/quantityGiven2"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/category"
            android:layout_below="@+id/quantityGiven2" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantityGiven2"
            android:layout_above="@+id/brand"
            android:layout_toEndOf="@+id/category"
            android:id="@+id/categoryGiven"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/brand"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/brand"
            android:layout_below="@+id/category" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category"
            android:layout_toEndOf="@+id/brand"
            android:id="@+id/brandGiven"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/material"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/material"
            android:layout_below="@+id/brand" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brand"
            android:layout_toEndOf="@+id/material"
            android:id="@+id/materialGiven"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/pattern"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/pattern"
            android:layout_below="@+id/material" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/material"
            android:layout_toEndOf="@+id/pattern"
            android:id="@+id/patternGiven"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/type"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/type"
            android:layout_below="@+id/pattern" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pattern"
            android:layout_toEndOf="@+id/type"
            android:id="@+id/typeGiven"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/gender"
            android:layout_below="@+id/type" />

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type"
            android:layout_toEndOf="@+id/gender"
            android:id="@+id/genderGiven"
            android:textSize="15sp"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/aboutSection"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shippingSection"
        android:layout_below="@id/aboutSection"
        android:background="#f8f8f8"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/shippingInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/shippingInfo"/>

        <TextView
            android:id="@+id/returnPolicy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/returnPolicy"
            android:layout_below="@+id/shippingInfo"/>

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/returnPolicy"
            android:layout_toEndOf="@+id/returnPolicy"
            android:id="@+id/returnPolicyGiven"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/returnPolicy2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_below="@+id/returnPolicy"/>

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/returnPolicy2"
            android:layout_toEndOf="@+id/returnPolicy2"
            android:id="@+id/returnPayerGiven"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/guaranteePolicy"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/guaranteePolicy"
            android:layout_below="@+id/returnPolicy2"/>

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/guaranteePolicy"
            android:layout_toEndOf="@+id/guaranteePolicy"
            android:id="@+id/guaranteePolicyGiven"
            android:textSize="15sp"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@+id/shippingSection"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
</ScrollView>